--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="PowerApp">
 <head>
 
   <!-- Basic Page Needs
@@ -33,7 +33,7 @@
   <link rel="icon" type="image/png" href="images/favicon.png">
 
 </head>
-<body>
+<body ng-controller="MainCtrl">
 
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -57,11 +57,8 @@
       <h3 class="section-heading">Showcases</h3>
       <p class="section-description">These are the list of videos that are made with Power Point. Believe it?</p>
       <div class="row">
-        <div class="one-half column category">
-          <iframe width="100%" height="320px" src="https://www.youtube.com/embed/p03KMPr98oc" frameborder="0" allowfullscreen></iframe>
-        </div>
-        <div class="one-half column category">
-          <iframe width="100%" height="320px" src="https://www.youtube.com/embed/_KP-8hBtcJo" frameborder="0" allowfullscreen></iframe>
+        <div class="one-half column category" ng-repeat="video in videos">
+          <iframe width="100%" height="320px" ng-src="{{getIframeSrc(video.url)}}" frameborder="0" allowfullscreen></iframe>
         </div>
       </div>
     </div>
@@ -72,5 +69,8 @@
 
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+
+    <script src="js/angular.min.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
