--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         <div class="four columns">
           <h4 class="hero-heading">Who says that Power Point is just for presentation? Take a look at the showcases below</h4>
           <a class="button button-primary" href="#showcase">Show me</a>
+          <a class="button button-success" href="https://github.com/sonnylazuardi/madewithpowerpoint#contributing">Contribute</a>
         </div>
         <div class="eight columns phones">
           <img class="phone" src="pp.png">
